--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native": "0.79.2",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-css-interop": "^0.1.22",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
