--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-native": "0.79.2",
     "react-native-calendar-strip": "^2.2.6",
     "react-native-css-interop": "^0.1.22",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
@@ -69,7 +70,8 @@
     "react-native-svg": "^15.12.0",
     "react-native-svg-transformer": "^1.5.1",
     "react-native-web": "~0.20.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
