--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/native": "^7.1.6",
+    "@types/fhir": "^0.0.41",
+    "axios": "^1.12.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "date-fns": "^4.1.0",
     "expo": "~53.0.7",
