--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
+    "expo-print": "^15.0.7",
     "expo-router": "~5.0.5",
     "expo-secure-store": "~14.2.3",
+    "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~0.30.8",
     "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
